[tool.poetry]
name = "GoldenSource"
version = "0.1.0"
description = ""
authors = ["harryzhang <harryzhang0415@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
zeroc-ice = "^3.7.10"
tzlocal = "^5.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
