[tool.poetry]
name = "datamart-econometrics"
version = "1.1.4"
description = "Econometrics Toolkit for datamart"
authors = ["datamart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_econometrics" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"                 # scipy forces python <4.0 explicitly
scipy = "^1.10.1"
statsmodels = "^0.14.0"
arch = "^5.5.0"
linearmodels = "<=4.25"                # ^4.26 has setuptools-scm in setup_requires
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_core_extension"]
econometrics = "datamart_econometrics.econometrics_router:router"
