[tool.poetry]
name = "datamart-equity"
version = "1.1.4"
description = "Equity extension for datamart"
authors = ["datamart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_equity" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_core_extension"]
equity = "datamart_equity.equity_router:router"
