[tool.poetry]
name = "datamart-fixedincome"
version = "1.1.4"
description = "Fixed income extension for datamart"
authors = ["datamart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_fixedincome" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_core_extension"]
fixedincome = "datamart_fixedincome.fixedincome_router:router"
