[tool.poetry]
name = "datamart-news"
version = "1.1.4"
description = "News extension for datamart"
authors = ["datamart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_news" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_core_extension"]
news = "datamart_news.news_router:router"
