[tool.poetry]
name = "datamart-technical"
version = "1.1.5"
description = "Technical Analysis extension for datamart"
authors = ["datamart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_technical" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # scipy forces python <4.0 explicitly
scipy = "^1.10.1"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.1"
pandas-ta = "^0.3.14b"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_core_extension"]
technical = "datamart_technical.technical_router:router"
