[tool.poetry]
name = "datamart-charting"
version = "2.0.2"
description = "Charting extension for DataMart"
authors = ["DataMart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_charting" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # scipy forces python <4.0 explicitly
scipy = "^1.10.0"
plotly = "^5.17.0"
statsmodels = "^0.14.0"
reportlab = "^4.0.4"
pywry = "^0.6.1"
svglib = "^1.5.1"
nbformat = "^5.9.2"
pandas-ta = "^0.3.14b"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_obbject_extension"]
datamart_charting = "datamart_charting:ext"
