[tool.poetry]
name = "datamart-benzinga"
version = "1.1.4"
description = "Benzinga extension for DataMart"
authors = ["DataMart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_benzinga" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_provider_extension"]
benzinga = "datamart_benzinga:benzinga_provider"
