[tool.poetry]
name = "datamart-fmp"
version = "1.1.4"
description = "FMP extension for DataMart"
authors = ["DataMart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_fmp" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_provider_extension"]
fmp = "datamart_fmp:fmp_provider"
