[tool.poetry]
name = "datamart-government-us"
version = "1.1.4"
description = "US Government Data Extension for DataMart"
authors = ["DataMart <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_government_us" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"
random-user-agent = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_provider_extension"]
government_us = "datamart_government_us:government_us_provider"
