[tool.poetry]
name = "datamart-tmx"
version = "1.0.1"
description = "Unofficial TMX data provider extension for the DataMart Platform - Public Canadian markets data for Python and Fast API."
authors = ["DataMart <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_tmx" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp-client-cache = "^0.10.0"
aiosqlite = "^0.19.0"
random-user-agent = "^1.0.1"
exchange-calendars = "^4.2.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_provider_extension"]
tmx = "datamart_tmx:tmx_provider"
