[tool.poetry]
name = "datamart-tradingeconomics"
version = "1.1.4"
description = "Trading Economics extension for DataMart"
authors = ["DataMart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_tradingeconomics" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_provider_extension"]
tradingeconomics = "datamart_tradingeconomics:tradingeconomics_provider"
