[tool.poetry]
name = "datamart-yfinance"
version = "1.1.4"
description = "yfinance extension for DataMart"
authors = ["DataMart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_yfinance" }]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.2.27"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_provider_extension"]
yfinance = "datamart_yfinance:yfinance_provider"
