[tool.poetry]
name = "datamart-commodity"
version = "1.0.2"
description = "Commodity extension for datamart"
authors = ["datamart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_commodity" }]

[tool.poetry.dependencies]
python = "^3.8"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_core_extension"]
commodity = "datamart_commodity.commodity_router:router"
