[tool.poetry]
name = "datamart-etf"
version = "1.1.4"
description = "ETF extension for datamart"
authors = ["datamart Team <hello@datamart.co>"]
readme = "README.md"
packages = [{ include = "datamart_etf" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
datamart-core = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."datamart_core_extension"]
etf = "datamart_etf.etf_router:router"
